# async-io

./: .cirrus.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build-and-test.yaml  ci.yml  cross.yaml  lint.yaml  security.yaml
benches/: io.rs  timer.rs
examples/: block_on.rs  foo.rs  kqueue-process.rs  linux-inotify.rs  linux-timerfd.rs  ls.rs  unix-signal.rs  windows-uds.rs
src/: block_on.rs  driver.rs  io.rs  lib.rs  os.rs  parking.rs  reactor.rs  socket.rs  sys.rs  timer.rs
src/os/: kqueue.rs  unix.rs  windows.rs
src/reactor/: io.rs  kqueue.rs  mod.rs  poll.rs  registration.rs  timer.rs  unix.rs  uring.rs  windows.rs
src/sys/: epoll.rs  kqueue.rs  mod.rs  wepoll.rs
src/timer/: native.rs  web.rs
tests/: async.rs  block_on.rs  copy.rs  driver_not_spawned.rs  issue_182.rs  timer.rs  unblock.rs  yield_now.rs
