[package]
name = "blocking"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.3.1"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
rust-version = "1.48"
description = "A thread pool for isolating blocking I/O in async programs"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/blocking"
keywords = ["async", "file", "stdio", "stdin", "process"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
async-channel = "1.4.0"
async-lock = "2.6.0"
async-task = "4.0.2"
fastrand = "1.3.4"
futures-io = { version = "0.3.28", default-features = false, features = ["std"] }
futures-lite = { version = "1.11.0", default-features = false }
log = "0.4.17"
piper = "0.2.0"

[dev-dependencies]
futures-lite = "1.11.0"
log = "0.4.17"
