[package]
name = "async-io"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.13.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
rust-version = "1.63"
description = "Async I/O and timers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-io"
keywords = ["mio", "epoll", "kqueue", "iocp"]
categories = ["asynchronous", "network-programming", "os"]
exclude = ["/.*"]

[[bench]]
name = "io"
harness = false

[[bench]]
name = "timer"
harness = false

[dependencies]
cfg-if = "1"
futures-lite = { version = "1.11.0", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-lock = "2.6"
concurrent-queue = "2.2.0"
futures-io = { version = "0.3.28", default-features = false, features = ["std"] }
parking = "2.0.0"
polling = "3.0.0"
rustix = { version = "0.38.2", default-features = false, features = ["std", "fs"] }
slab = "0.4.2"
socket2 = { version = "0.5.3", features = ["all"] }
tracing = { version = "0.1.37", default-features = false }
waker-fn = "1.1.0"

[target.'cfg(target_family = "wasm")'.dependencies]
atomic-waker = "1.1.1"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.0", features = ["Window"] }

[dev-dependencies]
async-channel = "1"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
async-net = "1"
blocking = "1"
criterion = { version = "0.4", default-features = false, features = ["cargo_bench_support"] }
getrandom = "0.2.7"
signal-hook = "0.3"
tempfile = "3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen-test = "0.3.37"
web-time = "0.2.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
inotify = { version = "0.10.1", default-features = false }
timerfd = "1"

[target.'cfg(windows)'.dev-dependencies]
uds_windows = "1"

[patch.crates-io]
async-io = { path = "." }
